--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
+# Core Packages
+scikit-learn==1.0.2
+nltk==3.7
+gensim==4.2.0
+imbalanced-learn==0.9.0
+pandas==1.4.3
+numpy==1.23.1
+scipy==1.9.1
 
+# NLP
+spacy==3.4.1
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz
+tqdm==4.64.1
 
+# Visualization
+matplotlib==3.5.3
+seaborn==0.11.2
+
+# Workflow
+jupyter==1.0.0
+requests==2.28.1
+ipykernel==6.19.2
